added websocket integration to single strategy, no recieve live stream of market data for stocks

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/ManchasTieneChispas/simpleTrader#readme",
   "dependencies": {
-    "finnhub": "^1.2.1"
+    "finnhub": "^1.2.1",
+    "ws": "^7.3.1"
   }
 }
